[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scenes/DamageDisplay/damage_display.gd" id="1_script"]
[ext_resource type="PackedScene" path="res://scenes/NumberLabel/PopNumberLabel.tscn" id="2_pop"]

[node name="DamageDisplay" type="Node2D"]
script = ExtResource("1_script")

[node name="BasicLabelPosition" type="Marker2D" parent="."]
position = Vector2(0, -50)

[node name="SpecialLabelPosition" type="Marker2D" parent="."]
position = Vector2(50, -50)

[node name="PopLabelPosition" type="Marker2D" parent="."]
position = Vector2(0, -80)

[node name="PopNumberLabel" parent="PopLabelPosition" instance=ExtResource("2_pop")]
